--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
+    "axios": "^0.26.1",
     "ethers": "^5.6.1",
     "react": "^17.0.2",
+    "react-bootstrap-v5": "^1.4.0",
+    "react-data-table-component": "^7.4.7",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "toast": "^0.3.47",
     "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
