--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "keyofStringsOnly": true,
+    "downlevelIteration": true
   },
   "typeRoots": [
     "../node_modules/@types",
